tests/fixtures/invalid/pow_none_bytes_str.py
# Cannot call pow() with None, Bytes, Str
x = pow(None, b"hello", "hello")
